# holded-test

./: README.md  docker-compose.yaml
api/: pyproject.toml
api/api/: collect.py  main.py
beam/: pyproject.toml
beam/pipeline/: main.py
connectors/: events.enriched.s3.sink.json  events.raw.s3.sink.json
generator/: generator.py  pyproject.toml
generator/__MACOSX/: ._events.json
topics/: main-topics
