[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Data <data@holded.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"
fastapi = {extras = ["standard"], version = "^0.115.8"}
confluent-kafka = "^2.10.0"
fastavro = "^1.10.0"
boto3 = "^1.38.3"
attrs = "^25.3.0"
cachetools = "^5.5.2"
authlib = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
