[tool.poetry]
name = "beam"
version = "0.1.0"
description = ""
authors = ["Data <data@holded.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
apache-beam = {version = "2.58.0", extras = ["gcp"]}
confluent-kafka = "^2.10.0"
fastavro = "^1.10.0"
boto3 = "^1.38.3"
psycopg2-binary = "^2.9.10"
httpx = "^0.28.1"
authlib = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
